--- a/server/src/views/components/layout.ejs
+++ b/server/src/views/components/layout.ejs
@@ -16,13 +16,13 @@
   <link
     href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
     rel="stylesheet">
-
+  <script src="/js/jquery.min.js"></script>
 </head>
 
 <body>
 
   <%- content %>
-
+  <script src="/js/app.js"></script>
 </body>
 
 </html>
