--- a/server/src/views/components/layout.ejs
+++ b/server/src/views/components/layout.ejs
@@ -10,7 +10,7 @@
   <meta name="author" content="">
 
   <title>Web Server REST API</title>
-  <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon">
 
   <!-- Custom fonts for this template-->
   <link
