--- a/server/src/views/pages/index.ejs
+++ b/server/src/views/pages/index.ejs
@@ -1,10 +1,60 @@
 <% extend('../components/layout') %>
 
 <!-- Page Heading -->
-<div class="container">
-  <div class="row">
-    <div class="col-12">
-      <h1>Hello World</h1>
+<div class="d-sm-flex align-items-center justify-content-between mb-4">
+  <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
+</div>
+
+<div class="row">
+  <div class="col-12">
+    <i><small>Last updated: <span id="updatedAt"></span></small></i>
+  </div>
+</div>
+
+<div class="row">
+
+  <div class="col-xl-3 col-md-6 mb-4">
+    <div class="card border-left-secondary shadow h-100 py-2">
+      <div class="card-body">
+        <div class="row no-gutters align-items-center">
+          <div class="col mr-2">
+            <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+              Last Info</div>
+            <div class="h6 mb-0 font-weight-bold text-gray-800" id="totalSensorData">-</div>
+            <div class="mt-3 text-xs font-weight-bold text-primary text-uppercase mb-1">
+              Status</div>
+            <div class="h6 mb-0 font-weight-bold text-gray-800" id="ledInfo">Offline</div>
+          </div>
+          <div class="col-auto">
+            <i class="fas fa-chart-bar fa-2x text-gray-300"></i>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
+
+</div>
+
+<div class="row">
+
+  <div class="col-sm-6 mb-4">
+    <div class="card border-left-primary shadow h-100 py-2">
+      <div class="card-body">
+        <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+          LED Control
+        </div>
+        <div class="d-flex mt-2 flex-column">
+          <div class="mt-2 d-flex justify-content-center">
+            <button class="btn btn-primary mr-2" onclick="server.sendCommand('ON')">ON</button>
+            <button class="btn btn-danger mr-2" onclick="server.sendCommand('OFF')">OFF</button>
+          </div>
+          <div class="mt-3 d-flex align-items-center">
+            <label for="" class="mb-0">Color</label>
+            <input type="color" name="color" class="ml-3 form-control" id="colorSelectorActive" />
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </div>
